--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,17 @@
     <meta name="author" content="Prathamesh Charoskar">
 
     <script src="https://kit.fontawesome.com/4d5341ab5c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Quote Generator</title>
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
     <nav>
         <div class="heading">
-            <h1>Quote's</h1>
+           <h1><a href="/">Quote's</a></h1>
         </div>
         <div class="links">
             <ul>
@@ -31,6 +35,7 @@
                 <div class="quote">
                     <div class="quote-lines">Click on Generate button to get the quote</div>
                     <div class="author"></div>
+                    <button id="copyButton"><i class="fa-regular fa-copy"></i></button>
                 </div>
                 <button id="generateButton">Generate</button>
             </div>
@@ -44,8 +49,8 @@
                 <div class="social-link tabs">
                     <h2>Social Links</h2>
                     <ul>
-                        <li><a href="#"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/prathamesh-charoskar-0807452a9/"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                        <li><a href="https://www.instagram.com/pratham._.2006/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
                     </ul>
                 </div>
                 <div class="links tabs">
