--- a/views/about.ejs
+++ b/views/about.ejs
@@ -50,6 +50,11 @@
             </p>
         </section>
 
+        <section class="about-section">
+            <h2>Open Soucre</h2>
+            <p>This Website code is open source avialble on git-hub <a href="https://github.com/pratham2060/QuoteGenerator.git">CLICK HERE!</a> to go to the repository </p>
+        </section>
+
         <p>Thank you for visiting <strong>QuoteGenerator</strong>. We hope our quotes bring a smile to your face and inspiration to your day!</p>
     </div>
 </body>
