--- a/views/about.ejs
+++ b/views/about.ejs
@@ -57,5 +57,29 @@
 
         <p>Thank you for visiting <strong>QuoteGenerator</strong>. We hope our quotes bring a smile to your face and inspiration to your day!</p>
     </div>
+
+    <footer>
+        <div class="footer-sec">
+            <div class="footer-container">
+                <div class="social-link tabs">
+                    <h2>Social Links</h2>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/prathamesh-charoskar-0807452a9/"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                        <li><a href="https://www.instagram.com/pratham._.2006/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                    </ul>
+                </div>
+                <div class="links tabs">
+                    <h2>Useful Links</h2>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <p>©Copyrights reserved to Prathamesh Charoskar</p>
+        </div>
+    </footer>
 </body>
 </html>
