--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/4d5341ab5c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Contact Us</title>
     <link rel="stylesheet" href="stylesheets/constyle.css">
+    <script src="https://kit.fontawesome.com/4d5341ab5c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
-        <div class="heading">
-            <h1>Quote's</h1>
-        </div>
         <div class="links">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li> 
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li> 
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
     </nav>
 
-    <section class="main">
-        <div class="main-container">
-            <div class="contact-form-container">
-                <h2>Contact Us</h2>
+    <main>
+        <section class="contact-section">
+            <div class="contact-container">
+                <h1>Get in Touch</h1>
                 <form action="/submit-contact" method="post">
                     <div class="form-group">
                         <label for="name">Name:</label>
@@ -41,8 +39,8 @@
                     <button type="submit">Submit</button>
                 </form>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <footer>
         <div class="footer-sec">
@@ -50,16 +48,16 @@
                 <div class="social-link tabs">
                     <h2>Social Links</h2>
                     <ul>
-                        <li><a href="#"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/prathamesh-charoskar-0807452a9/"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                        <li><a href="https://www.instagram.com/pratham._.2006/"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
                     </ul>
                 </div>
                 <div class="links tabs">
                     <h2>Useful Links</h2>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +65,5 @@
             <p>©Copyrights reserved to Prathamesh Charoskar</p>
         </div>
     </footer>
-
-    <script src="/javascripts/conscript.js"></script>
 </body>
 </html>
